--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ WTForms==2.0.2
 Werkzeug==0.10.4
 aniso8601==1.1.0
 blinker==1.4
+gunicorn==19.3.0
 itsdangerous==0.24
 passlib==1.6.5
 psycopg2==2.6.1
