--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
-alembic==0.8.3
-aniso8601==1.1.0
-blinker==1.4
 Flask==0.10.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-Migrate==1.6.0
 Flask-Principal==0.4.0
 Flask-RESTful==0.3.4
+Flask-SQLAlchemy==2.1
 Flask-Script==2.0.5
 Flask-Security==1.7.4
-Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
-gunicorn==19.3.0
-itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.3
 MarkupSafe==0.23
+SQLAlchemy==1.0.9
+WTForms==2.0.2
+Werkzeug==0.10.4
+alembic==0.8.3
+aniso8601==1.1.0
+blinker==1.4
+flask-restplus==0.8.0
+functools32==3.2.3-2
+gunicorn==19.3.0
+itsdangerous==0.24
+jsonschema==2.5.1
 passlib==1.6.5
 psycopg2==2.6.1
 python-dateutil==2.4.2
 python-editor==0.4
 pytz==2015.6
 six==1.10.0
-SQLAlchemy==1.0.9
-Werkzeug==0.10.4
 wheel==0.24.0
-WTForms==2.0.2
+wsgiref==0.1.2
